--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A react component to display Pokemon",
   "main": "pokemon.js",
   "dependencies": {
-    "react-tools": "~0.8.0"
+    "react": "^15.2.1"
   },
   "devDependencies": {},
   "scripts": {
